--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,19 @@
-/* TODO: make it look awesome. */
-/* TODO: make it responsive. */
 
 textarea {
 	width: 24em;
   height: 3em;
 }
+img{
+
+	width: auto;
+	height:auto;
+	justify-content: center;
+}
+#align{
+	padding-left: 150px;
+}
+
+
 
 body{
   margin: 0;
@@ -12,12 +21,13 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100vh;
+	min-height: auto;
 	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #1a750dc2, #151520);
+	background: #275d38;
 }
 button{
-  width: 60%;
+ 
+	width: 50%;
 	height: 40px;
 	margin: 10px auto;
 	justify-content: center;
@@ -35,7 +45,6 @@ button{
 }
 
 select {
-	/* Reset */
   
 	border: 0;
 	outline: 0;
@@ -65,4 +74,3 @@ select {
 	}
   }
 
-/* transition: .2s ease-in; */
